Fixes, and focus: Financing the war economy

--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -56,6 +56,16 @@ GER_lost_momentum:0 "Lost Momentum"
 GER_lost_momentum_desc:0 ""
 GER_idea_extreme_rationing:0 "Extreme Rationing"
 GER_idea_extreme_rationing_desc:0 ""
+GER_idea_national_debt:0 "Effective National Debt"
+GER_idea_national_debt_desc:0 ""
+GER_idea_national_debt_2:0 "Growing National Debt"
+GER_idea_national_debt_2_desc:0 ""
+GER_idea_national_debt_3:0 "Steep National Debt"
+GER_idea_national_debt_3_desc:0 ""
+GER_idea_national_debt_4:0 "Extreme National Debt"
+GER_idea_national_debt_4_desc:0 ""
+GER_lack_of_capital:0 "Unfinanced Budget"
+GER_lack_of_capital_desc:0 ""
 
 #Put stuff in the right place Mici!
 GER_state_of_the_military:0 "State of the Military"
@@ -264,6 +274,8 @@ ww1_germanrework.32.t:0 "A Quick Resolution"
 #Decisions
 GER_fleet_in_being_mission:0 "Fleet in Being"
 GER_smarter_navy_mission:0 "Smarter Navy"
+GER_national_debt_mission:0 "Growing Debt"
+GER_major_deficit_spending:0 "Major Deficit Spending"
 
 #The Haldane Mission
 GER_preparing_for_the_haldane_mission:0 "Preparations for the Haldane Mission"
@@ -336,6 +348,7 @@ ww1_germanytooltip14:0 "This is a §3rightist§! law."
 ww1_germanytooltip15:0 "This law will correlate to the ideology of the chancellor."
 ww1_germanytooltip16:0 "This focus will reveal it's effects depending on the outcome of the Haldane mission."
 ww1_germanytooltip17:0 "The Haldane mission was a successes, it's now possible to fully push for British neutrality in the war and persue our goals in Africa"
+ww1_germanytooltip18:0 "Annually, the positive effects of using war bons and loans will diminish whilst our debt continues to grow."
 
 ww1_germany_pf:0 "State of the Military Increase by 5."
 ww1_germany_pt:0 "State of the Military Increase by 10."
