--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -454,30 +454,51 @@
  home_defense_focus_desc:0 "We will turn our country into a gigantic fortress that only a madman wants to attack."
 
  # Feudal Tree
- FEU_def_country_name:0 "[ROOT.GetNameDefCap]"
- FEU_secure_internal_politics:0 "Secure Internal Politics"
- FEU_strengthen_ruler_position:0 "Strengthen [ROOT.GetLeader]'s Authority"
- FEU_strengthen_feudalism:0 "Strengthen the Feudal System"
+FEU_def_country_name:0 "[ROOT.GetNameDefCap]"
+FEU_secure_internal_politics:0 "Secure Internal Politics"
+FEU_strengthen_ruler_position:0 "Strengthen [ROOT.GetLeader]'s Authority"
+FEU_strengthen_feudalism:0 "Strengthen the Feudal System"
 
- FEU_our_place_in_the_world:0 "Our Place in the World"
- FEU_capital_arms_workshops:0 "[ROOT.Capital.GetCapitalVictoryPointName] Arms Workshops"
- FEU_secure_entente_support:0 "Secure Entente Support"
- FEU_entente_industrial_aid:0 "Entente Industrial Support"
- FEU_request_entente_cannons:0 "Request Entente Cannons"
- FEU_british_industrial_arms_support:0 "British Military Industry Support"
- FEU_entente_advisors:0 "French Advisors"
- FEU_join_entente:0 "Join the Entente"
- FEU_italian_support:0 "Italian Support"
- FEU_secure_german_support:0 "Secure German Support"
- FEU_german_industrial_aid:0 "German Industrial Support"
- FEU_german_smallarms:0 "German Small Arms"
- FEU_ottoman_military_aid:0 "Ottoman Military Aid"
- FEU_german_military_mission:0 "German Military Mission"
- FEU_join_central_powers:0 "Join the Central Powers"
- FEU_german_arms_support:0 "German War Industries"
- FEU_purchase_foreign_arms:0 "Purchase Foreign Arms"
- FEU_purchase_foreign_equipment:0 "Purchase Foreign Equipment"
- FEU_purchase_foreign_artillery:0 "Purchase Foreign Artillery"
+
+
+FEU_our_place_in_the_world:0 "Our Place in the World"
+FEU_per_secure_our_independence:0 "Secure our Independence"
+FEU_american_mission:0 "American Mission"
+FEU_american_economic_advisors:0 "American Economic Advisors"
+FEU_invite_swedish_volunteers:0 "Invite Swedish Volunteers"
+FEU_german_support:0 "German Support"
+FEU_german_weapons:0 "German Weapons"
+FEU_per_ottoman_support:0 "Ottoman Support"
+FEU_industrial_machinery:0 "Industrial Machinery"
+FEU_fight_uk:0 "Fight the British"
+FEU_persia_capital_arms_workshops:0 "[ROOT.Capital.GetCapitalVictoryPointName] Arms Workshops"
+FEU_secure_our_independence:0 "Secure our independence"
+FEU_agreements_with_britain:0 "Agreements With Britain"
+FEU_seek_british_guarantees:0 "Seek British Guarantees"
+FEU_attack_the_sick_man:0 "Fight the Sick Man"
+FEU_continue_working_with_britain:0 "Continue Working with Britain"
+FEU_seek_ottoman_support:0 "Seek Ottoman Support"
+FEU_ottoman_support:0 "Ottoman Aid"
+FEU_secure_our_position:0 "Secure our Position"
+FEU_fight_the_colonisers:0 "Fight the Colonisers"
+FEU_capital_arms_workshops:0 "[ROOT.Capital.GetCapitalVictoryPointName] Arms Workshops"
+FEU_secure_entente_support:0 "Secure Entente Support"
+FEU_entente_industrial_aid:0 "Entente Industrial Support"
+FEU_request_entente_cannons:0 "Request Entente Cannons"
+FEU_british_industrial_arms_support:0 "British Military Industry Support"
+FEU_entente_advisors:0 "French Advisors"
+FEU_join_entente:0 "Join the Entente"
+FEU_italian_support:0 "Italian Support"
+FEU_secure_german_support:0 "Secure German Support"
+FEU_german_industrial_aid:0 "German Industrial Support"
+FEU_german_smallarms:0 "German Small Arms"
+FEU_ottoman_military_aid:0 "Ottoman Military Aid"
+FEU_german_military_mission:0 "German Military Mission"
+FEU_join_central_powers:0 "Join the Central Powers"
+FEU_german_arms_support:0 "German War Industries"
+FEU_purchase_foreign_arms:0 "Purchase Foreign Arms"
+FEU_purchase_foreign_equipment:0 "Purchase Foreign Equipment"
+FEU_purchase_foreign_artillery:0 "Purchase Foreign Artillery"
 
 FEU_the_adjective_armed_forces:0 "The [ROOT.GetAdjective] Armed Forces"
 FEU_warrior_tradition:0 "Warrior Tradition"
