rso northern intervention

--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2934,6 +2934,9 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  SRA_counter_intelligence:0 "Counter Intelligence"
  SRA_special_council_idea:0 "Special Council"
  SRA_british_advisors:0 "British Advisors"
+ # RSO
+ RCW_northern_russian_expedition_idea:0 "Northern Russian expedition"
+ RCW_northern_russian_expedition_idea_desc:0 "Deploying to the icy ports of Northern Russia, Entente forces have taken up the crucial task of protecting vast stockpiles of equipment from enemy capture. Amidst relentless adversities, we've fortified these strategic harbors against incursions."
  #DON
  DON_alekseev_organization_1:0 "Alekseev Organization"
  DON_alekseev_organization_2:0 "Alekseev Organization"
