banat mechanic + focuses

--- a/localisation/english/ww1_romania_l_english.yml
+++ b/localisation/english/ww1_romania_l_english.yml
@@ -501,7 +501,7 @@ ROM_anti_hungarian_propaganda:0 "Anti-Hungarian Propaganda"
 ROM_retry_to_secure_banat:0 "Finders Keepers"
 ROM_retry_to_secure_banat_desc:0 "Securing [764.GetName] has been an objective by the [ROM.GetAdjective] Government since our failure of obtaining it at the Paris Peace Conference."
 ROM_revitalization_of_the_north:0 "Economic Revitalization of the North"
-
+ROM_romanian_hungarian_war_focus:0 "The War Against Socialism"
 
 ## -- TOOLTIPS -- ##
 ROM_war_has_ended:0 "§WThis focus will be §W§Gautocompleted§G§W when the §W§YGreat War§Y§W ends"
@@ -569,6 +569,7 @@ ROM_cttd:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Da
 ROM_balbudg.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §G+0.05§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-5.0%§!"
 ROM_reduce_reliance.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §G-0.10§!"
 ROM_fftf:0 "Modify §YRomanian Economy §Y§Wby:\n£factory_output_texticon Factory Output:§W§G +5.00%"
+ROM_raid_hung.tt:0 "Modify §YRomanian Economy §Y§Wby:\n£consumer_goods_texticon Consumer Goods factor:§W§Y -5.00%"
 ROM_adapt_times.tt:0 "Modify §YRomanian Army§! by\n£defence_texticon Division Defense: §G+10.00%§!\n\n"
 ROM_for_truth.tt:0 "Modify §YRomanian Army§! by\n£defence_texticon Division Defense: §G+10.00%§!\n£attacker_speed_texticon Division Speed: §G+5.00%§!\n\n"
 ROM_acds:0 "Modify §YRomanian Army§! by\n£organization_texticon Division Organization: §G+10.00%§!"
@@ -608,9 +609,11 @@ kings_gov.tt:0 "This focus will be §Yautocompleted§! if King Carol appoints th
 kings_gov2.tt:0 "This focus will be §Yautocompleted§! if the King appoints §YTitu Maiorescu§! of the §cPC§! to form a government"
 kings_gov3.tt:0 "This focus will be §Yautocompleted§! if the King appoints §YBarbu Delavrancea§! of the §cPC§! to form a government"
 kings_gov4.tt:0 "This focus will be §Yautocompleted§! if the King appoints §YConstantin Arion§! of the §cPC§! to form a government"
-
 ROM_armistice_of_focsani:0 "The Armistice of Focsani has been signed. Romania now exits the war."
 ROM_armistice_of_focsani.tt:0 "§WWhite Peace with the §W§YCentral Powers§Y§W.\nBulgaria will become the owner of the Southern Territories, like Mangalia and Southern Dobruja. Austria will occupy South Bukovina."
+ROM_more_likely_if_thing.tt:0 "§WThey will be §Y§Gmore likely§G§W to accept if:\n- Has a high opinion of us\n- Is in a faction with us\n- Is fighting a war together"
+
+
 
 ### -- EVENTS -- ##
 
@@ -933,7 +936,16 @@ ww1_romania.91.a:0 "Dark times."
 ww1_romania.91.b:0 "At least we survived."
 ww1_romania.91.c:0 "One less front to deal with."
 ww1_romania.91.d:0 "Damn it!"
-
+ww1_romania.98.t:0 "Raid on the Hungarian Border"
+ww1_romania.98.d:0 "Our soldiers have successfully conducted a raid on the Hungarian Border."
+ww1_romania.98.a:0 "This will benefit us"
+ww1_romania.99.t:0 "Romanian Troops conduct a Raid"
+ww1_romania.99.d:0 "Romanian troops have entered our country and raided some weapon stashes and a base. This is a clear violation of international boundaries."
+ww1_romania.99.a:0 "How dare they?"
+ww1_romania.100.t:0 "[ROM.GetName] asks for [764.GetName]"
+ww1_romania.100.d:0 "[ROM.GetName] asks for [764.GetName] after they failed to obtain it from the Paris Peace Conference."
+ww1_romania.100.a:0 "We don't need it."
+ww1_romania.100.b:0 "What the hell?"
 
 ## -- IDEAS -- ##
 ROM_unionist_zeal:0 "Unionist Zeal"
@@ -1002,7 +1014,7 @@ ROM_1912_naval_program_idea:0 "[ROM.GetAdjective] Naval Program"
 ROM_1912_naval_program_idea_screen:0 "Surface Hunters"
 ROM_1912_naval_program_idea_sub:0 "Underwater Sinkers"
 ROM_anti_hungarian_propaganda_idea:0 "Anti-Hungarian Propaganda"
-
+ROM_recently_raided:0 "Recently Raided"
 
 ## -- DECISIONS -- ##
 ROM_national_opposition:0 "National Opposition"
@@ -1118,6 +1130,22 @@ ROM_tudor_arghezi:0 "Tudor Arghezi"
 
 
 
+## -- DECISIONS -- ##
+
+ROM_balkan_war_intervention_decision:0 "Intervention in Balkan War"
+ROM_great_war_intervention:0 "Join the Great War"
+ROM_great_war_surrender:0 "Surrender To Germany"
+ROM_great_war_rejoin:0 "Rejoin the Great War"
+ROM_sue_for_peace_HUN:0 "Offer Surrender Terms to [HUN.GetName]"
+ROM_army_reform_decision:0 "Army Reorganization"
+ROM_fix_the_railways:0 "Fix the Railways"
+ROM_fixing_the_railways.tt:0 "\nWhen this decision is taken:\n§YFor 365 Days:§!\nConsumer Goods Factories factor: §Y10.0%§!\n\n§YEffects when removed:§!\nModify §YPoor Railway System§! by\nConsumer Goods Factories factor: §Y-5.0%§!\nConstruction Speed: §G+5.00%§!"
+ROM_kings_country_category:0 "King's country"
+ROM_kings_country_category_desc:0 "king's approval of government §Y[?kings_approval_of_government]§!"
+ROM_king_appoints_new_government:0 "King Appoints New Government"
+ROM_encourage_aromanian_migration:0 "Encourage Aromanian Migration"
+ROM_postwar_cat:0 "Postwar for Romania"
+ROM_pillage_the_hungarian_border_decision:0 "Pillage the Hungarian Border"
 
 
 
