--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -470,9 +470,9 @@ FEU_german_support:0 "German Support"
 FEU_german_weapons:0 "German Weapons"
 FEU_per_ottoman_support:0 "Ottoman Support"
 FEU_industrial_machinery:0 "Industrial Machinery"
-FEU_fight_uk:0 "Fight the British"
+FEU_fight_uk:0 "Fight the Entente"
 FEU_persia_capital_arms_workshops:0 "[ROOT.Capital.GetCapitalVictoryPointName] Arms Workshops"
-FEU_secure_our_independence:0 "Secure our independence"
+FEU_secure_our_independence:0 "Secure our Independence"
 FEU_agreements_with_britain:0 "Agreements With Britain"
 FEU_seek_british_guarantees:0 "Seek British Guarantees"
 FEU_attack_the_sick_man:0 "Fight the Sick Man"
