--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1928,6 +1928,9 @@ FEU_mass_illiteracy:0 "Mass Illiteracy"
 FEU_mass_illiteracy_desc:0 "In our nation, most of the population are illiterate and can't read. This poses a signifcant problem as most of our population is uneducated on many basic things and limits us in many ways."
 FEU_efficent_farming_techniques_idea:0 "Expanded Agriculture"
 FEU_strengthened_feudalism:0 "Strengthened Feudalism"
+FEU_fight_the_imperialists_idea:0 "Fighting the Imperialists"
+FEU_fight_the_sick_man_idea:0 "Fighting the Sick Man"
+FEU_fight_the_uk_idea:0 "Fighting the Colonisers"
 
  #UK
  ENG_Staff:0 "English Staff"
