more romania air rework

--- a/localisation/english/ww1_romania_l_english.yml
+++ b/localisation/english/ww1_romania_l_english.yml
@@ -16,7 +16,7 @@ ROM_the_party_of_thieves:0 "The Party of Thieves"
 ROM_advancements_in_plane_technology:0 "Commission Military Aircraft"
 ROM_advancements_in_plane_technology_desc:0 "We need to adapt [ROM.GetName] to the future, including aircraft technology. There are a lot of [ROM.GetAdjective] inventors and aircraft designers ready to take the challenge. We will commission one of them to design for us a plane that can be used for military purposes, in major part to transmit messages across vast lands. The question is who do we ask?"
 ROM_domestic_air_manufactor:0 "Cerchez and Co"
-ROM_domestic_air_manufactor_desc:0 "Domestic production allows us to fulfill the exact needs of our military. We should turn to Cerchez and Co, a Romanian airplane manufacturer in danger of bankruptcy. If the government buoys them we might just be able to build ourself an airforce all by our lonesome."
+ROM_domestic_air_manufactor_desc:0 "Domestic production allows us to fulfill the exact needs of our military. We should turn to Cerchez and Co, a Romanian airplane manufacturer in danger of bankruptcy. If the government purchases them we might just be able to build ourself an airforce all by ourselves."
 ROM_sec:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n£attacker_speed_texticon Division Speed: §G+5.00%§!"
 ROM_the_southern_wall:0 "The Southern Wall"
 ROM_stragetic_fortifications_on_the_southern_border:0 "Fortify Key Cities on the Bulgarian Border"
@@ -130,13 +130,11 @@ ROM_challenge_pc_dominance_of_urban_romania:0 "Contest PC Dominance of Urban Rom
 ROM_pcd_government:0 "The government is lead by the §mPCD§!"
 disable_htopnl:0 "§RDisables§! national focus:'§Y Hostile Takeover of the PNL§!'"
 ROM_election_russik_style:0 "We will manage the §lPNL§! election campaign. We will make a variety of choices on our campaign strategy, depending on what we do, we may win or lose the elections. §RWe will not be directly told the results of our decisions, so choose wisely§!"
-
 pnl_standing_improve:0 "The §lPNL's§! standings in the election will improve"
 pc_standing_improve:0 "The §cPC's§! standings in the election will improve"
 ROM_vast_political_promises:0 "Vast Political Promises"
 ROM_religious_tolerance:0 "Religious Tolerance"
 ROM_the_uniting_principal:0 "The Uniting Principles"
-
 ROM_compassionate_conservatism:0 "Compassionate Conservatism"
 ROM_building_a_new_consensus:0 "Building a New Concensus"
 ROM_what_were_fighting_for:0 "What We're Fighting For"
@@ -502,7 +500,8 @@ ROM_retry_to_secure_banat:0 "Finders Keepers"
 ROM_retry_to_secure_banat_desc:0 "Securing [764.GetName] has been an objective by the [ROM.GetAdjective] Government since our failure of obtaining it at the Paris Peace Conference."
 ROM_revitalization_of_the_north:0 "Economic Revitalization of the North"
 ROM_romanian_hungarian_war_focus:0 "The War Against Socialism"
-
+ROM_recall_romanian_engineers:0 "Recall [ROM.GetAdjective] Engineers"
+ROM_recall_romanian_engineers_desc:0 "A bunch of [ROM.GetAdjective] aircraft engineers are located in [FRA.GetName] or other Western European countries right now. We can recall them back to [ROM.GetName] for their service as air chiefs."
 ## -- TOOLTIPS -- ##
 ROM_war_has_ended:0 "§WThis focus will be §W§Gautocompleted§G§W when the §W§YGreat War§Y§W ends"
 ROM_war_has_ended_lost:0 "§WThis focus will be §W§Gautocompleted§G§W when [ROM.GetName] is §W§Gvictorious§G§W in the §W§YGreat War§Y§W"
@@ -579,6 +578,7 @@ member_of_pc:0 "Member of §cPC§!"
 member_of_pnl:0 "Member of §lPNL§!"
 member_of_psdr:0 "Member of §rPSDR§!"
 member_of_pnd:0  "Member of §qPND§!"
+depends_on_event_choices.tt:0 "§RBased on the event above, you will get to choose between these choices:§R§W"
 ROM_show_advisor:0 "All §YPolitical Advisors§! from the §mPNL§! and §cPC§! will be available"
 ROM_rightqing_thin:0 "§GAvailable§! as §YPolitical Advisor§!:\n§YAlexandru Cuza§!, which grants (Daily Proto-Fascist Support: §G+0.10§!, Daily Political Power Gain: §G+0.05§!, Consumer Goods Factories factor: §Y-5.0%§!)"
 ROM_german_support_withdraw.tt:0 "If we go to war with §YGermany§! the effects from this §Yfocus§! will be §RRemoved§!."
@@ -1126,6 +1126,8 @@ ROM_aurel_vlaicu_name:0 "Aurel Vlaicu"
 ROM_traian_vuia_air:0 "Traian Vuia"
 ROM_titu_maiorescu:0 "Titu Maiorescu"
 ROM_tudor_arghezi:0 "Tudor Arghezi"
+ROM_george_bibescu_air:0 "George Bibescu"
+ROM_henri_coanda_air:0 "Henri Coandă"
 
 
 
