Riau-Lingga state

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1049,6 +1049,7 @@
  STATE_1048: "Swaziland"
  STATE_1049: "Orange Free State"
  STATE_1050: "Skeleton Coast"
+ STATE_1051: "Riau-Lingga"
 
  Dyushambe: "Dyushambe"
  YODONG_STATE: "Yodong"
