--- a/localisation/english/ww1_romania_l_english.yml
+++ b/localisation/english/ww1_romania_l_english.yml
@@ -1024,6 +1024,8 @@ ROM_socialists_ally:0 "§GSupporting§! §YCarp§!"
 ROM_socialist_crushed:0 "§GNot a source of concern§!"
 ROM_socialist_ally_focus:0 "The §rPDSR§! will become §Gsupportive§!, nullifying an enemy of the government.\nModify §Y'National Opposition§! by:\nStability: §G+10.00%§!"
 ROM_socialist_crush_focus:0 "The §rPDSR§! will become §Gnot a source of concern§!, nullifying an enemy of the government.\nModify §Y'National Opposition§! by:\nPolitical Power Gain: §G+10%§!"
+ROM_old_guard_crush_focus:0 "The §qOld Guard§! will become §Gpolitically isolated§!, nullifying an enemy of the government.\nModify §Y'National Opposition§! by:\nPolitical Power Gain: §G+5%§!\nStability: §R-10.00%§!"
+
 king_opinion_set_n.tt:0 "The king's opinion of the current government become §YNeutral§!, which gives us:\n£political_power_texticon Daily Political Power Gain: §Y+0.00§!\n£stability_texticon Stability: §Y+0.00%§!"
 king_opinion_set_ha.tt:0 "The king's opinion of the current government become §GVery Positive§!, which gives us:\n£political_power_texticon Political Power Gain: §G+20%§!\n£stability_texticon Stability: §G+12.00%§!"
 ROM_adopt_a_workers_right_plank: "Adopt a Platform on Workers Rights "
