finished colonial tree

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8698,7 +8698,7 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  POR_colonial_sphere:0 "The Colonial Sphere"
  POR_colonial_sphere_desc:0 ""
  POR_colonial_forced_labor_tt:0 "Will add the §YColonial Forced Labor§! state-modifier in all current colonial states."
- POR_policy_on_forced_labor_tt:0 "The current government will try and pass a "§YPolicy on Indigenous Labour§!", if §Rfailed§!, it could bolster §Grepublican support§! and have §Rdrastic consequences§!."
+ POR_policy_on_forced_labor_tt:0 "The current government will try and pass the "§YPolicy on Indigenous Labour§!", if §Rfailed§!, it could bolster §Grepublican support§! and have §Rdrastic consequences§!."
  POR_policy_on_forced_labor:0 "Policy on Indigenous Labor"
  POR_policy_on_forced_labor_desc:0 ""
  POR_teach_portuguese_in_mission_schools:0 "Teach Portuguese in Mission Schools"
@@ -8727,6 +8727,18 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  POR_beira_sponsor_operations_desc:0 ""
  POR_subsidize_nyassa_consolidated:0 "Subsidize Nyassa Consolidated"
  POR_subsidize_nyassa_consolidated_desc:0 ""
+ POR_rubber_exploitation_in_chokwe:0 "Rubber Exploitation in Chokwe"
+ POR_rubber_exploitation_in_chokwe_desc:0 ""
+ POR_kasanje_rubber_works:0 "Kasanje Rubber Works"
+ POR_kasanje_rubber_works_desc:0 ""
+ POR_mandatory_resource_quotas:0 "Mandatory Resource Quotas"
+ POR_mandatory_resource_quotas_desc:0 ""
+ POR_labor_incentives_for_local_chiefs:0 "Labor Incentives for Local Chiefs"
+ POR_labor_incentives_for_local_chiefs_desc:0 ""
+ POR_conscription_of_colonial_forces:0 "Conscription of Colonial Forces"
+ POR_conscription_of_colonial_forces_desc:0 ""
+ POR_campanhas_de_pacificacao_category:0 "Campaigns of Pacification and Occupation"
+ POR_campanhas_de_pacificacao_category_desc:0 ""
 
  BHR_move_capital:0 "Move Capital to Manama"
 
