--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10870,16 +10870,9 @@ POR_revoke_the_1890_ultimatum_desc:0 "The British and their allies our embroiled
 POR_the_austral_campaign:0 "The Austral Campaign"
 POR_the_austral_campaign_desc:0 ""
 POR_reconnect_the_exclave:0 "Reconnect The Exclave"
-<<<<<<< Updated upstream
-POR_reconnect_the_exclave_desc:0 "The most northern part of Angola, Cabinda is strategically vulnerable. Its blocked from us by the Belgian Congo, an artificial mess built on cruelty and mismanagement. Moreover, the Kingdom of Kongo, our own vassal, was partly absorbed into the Congo Free State. Its time we end this farce."
-POR_mappa_d'africa_ambitions:0 "Mappa D'Africa Ambitions"
-POR_mappa_d'africa_ambitions_desc:0 
-
-=======
 POR_reconnect_the_exclave_desc:0 "The most northern part of Angola, Cabinda is strategically vulnerable. Its blocked from us by the Belgian Congo, an artificial mess built on cruelty and mismanagement. Moreover, the Kingdom of Kongo, our own vassal, was partly absorbed into the Congo Free State. Its time we end this farce"
 POR_mappa_d_africa_ambitions:0 "Mappa D'Africa Ambitions"
 POR_mappa_d_africa_ambitions_desc:0 ""
->>>>>>> Stashed changes
 POR_the_iberian_proposal:0 "The Iberian Proposal"
 POR_the_iberian_proposal_desc:0 ""
 POR_one_idea_two_states:0 "One Idea Two States"
@@ -10893,15 +10886,9 @@ POR_a_alianca_peninsular_desc:0 ""
 POR_luso_hispanic_pact:0 "Luso-Hispanic Pact"
 POR_luso_hispanic_pact_desc:0 ""
 POR_gramido_liberty_accords:0 "Gramido Liberty Accords"
-<<<<<<< Updated upstream
-POR_gramido_liberty_accords_desc:0
-POR_host_el_africano:0 "Host El Africano
-POR_host_el_africano_desc:0 " To celebrate the new ties between our two nations, hosting a state visit by Spains King Alfonso XII To Lisbon."
-=======
 POR_gramido_liberty_accords_desc:0 ""
 POR_host_el_africano:0 "Host El Africano"
-POR_host_el_africano_desc:0 ""
->>>>>>> Stashed changes
+POR_host_el_africano_desc:0 "To celebrate the new ties between our two nations, hosting a state visit by Spains King Alfonso XII To Lisbon."
 POR_against_a_troubled_europe:0 "Against A Troubled Europe"
 POR_against_a_troubled_europe_desc:0 ""
 POR_promote_a_liberal_association:0 "Promote a Liberal Association"
@@ -10947,7 +10934,7 @@ POR_africa_ocidental_stronghold:0 "África Ocidental Stronghold"
 POR_africa_ocidental_stronghold_desc:0 ""
 POR_eradicate_the_barue_rebels:0 "Eradicate the Barue Rebels"
 POR_eradicate_the_barue_rebels_desc:0 ""
-POR_eradicate_the_barue_rebels_tt:0 "The §YTribal Lands§! state-modifier will be §Gremoved§! from the state of §YTete§! and §YManica and Sofala§! and will prevent any §Ruprisings§! in that region."
+POR_eradicate_the_barue_rebels_tt:0 "The §YTribal Lands§! state-modifier will be §Gremoved§! in §YTete§! and §YManica and Sofala§! and will prevent any §Ruprisings§! in that region."
 POR_tribal_chiefs_cooperation:0 "Tribal Chiefs Cooperation"
 POR_tribal_chiefs_cooperation_desc:0 ""
 POR_tribal_chiefs_cooperation_occupation_law_tt:0 "Unlocks occupation law in §YAfrican§! states:\n"
@@ -10955,16 +10942,21 @@ tribal_chiefs_cooperation:0 "Tribal Chiefs Cooperation"
 POR_abolish_kongolese_monarchy:0 "Abolish Kongolese Titular Monarchy"
 POR_abolish_kongolese_monarchy_desc:0 ""
 POR_kongo_revolt_crushed:0 "The Kongo Revolt has been crushed"
-POR_fund_the_campanhia:0 "Fund the Companhia"
-POR_fund_the_campanhia_desc:0 ""
+POR_fund_the_companhia:0 "Fund the Companhia"
+POR_fund_the_companhia_desc:0 ""
 POR_the_mbunda_spark:0 "The Mbunda Spark"
 POR_the_mbunda_spark_desc:0 ""
 POR_triumph_over_mbundaland:0 "Triumph Over Mbundaland"
 POR_triumph_over_mbundaland_desc:0 ""
-POR_angolan_debacle:0 "Angolan Debacle"
+POR_triumph_over_mbundaland_tt:0 "The §YTribal Lands§! state-modifier will be §Gremoved§! in §YAngola§!."
+POR_victory_in_mbunda:0 "Our forces have conquered the Mbunda Kingdom"
+POR_defeat_in_mbunda:0 "Our forces have been pushed back by the Mbunda Kingdom"
+POR_angolan_debacle:0 "The Angolan Debacle"
 POR_angolan_debacle_desc:0 ""
+POR_angolan_debacle_tt:0 "The §YTribal Lands§! state-modifier will be §Rworsened§! in §YAngola§!."
 POR_the_phantom_menace:0 "The Phantom Menace"
 POR_the_phantom_menace_desc:0 ""
+POR_the_phantom_menace_tt:0 "The §YTribal Lands§! state-modifier will be §Gremoved§! in §YBundaland§! in §Y730 days§!."
 POR_finance_the_cpb:0 "Finance the CPB"
 POR_finance_the_cpb_desc:0 ""
 POR_campanhas_de_pacificacao:0 "Campanhas de Pacificação e Ocupação"
