--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -508,6 +508,7 @@
  manila_railway_company:0 "Manila Railway Company"
  caminhos_de_ferro_portugueses:0 "Caminhos de Ferro Portugueses"    
  empresa_industria_portugesa:0 "Empresa Industria Portugesa"
+ companhia_de_produtos_de_borracha:0 "Companhia de Produtos de Borracha"
  ministry_of_agriculture:0 "Ministry of Agriculture"
  ministry_of_chemical_industry:0 "Ministry of Chemical Industry"
  cooperacion_del_peru:0 "Cooperación del Peru"
@@ -3132,7 +3133,9 @@ POR_republican_revolutionaries:0 "Republican Revolutionaries"
 POR_republican_revolutionaries_desc:0 "With the possibility of a Portuguese Republic becoming even more of a reality within the recent years, it seems as terrorist activity from the Republican Party has spiken in the recent years, causing a great amount of instability throughout the Realm while also bolstering the democratic cause and their willingness to fight for Republicanism, even if it means death."
 POR_incompetent_military_force:0 "Incompetent Exército Português"
 POR_incompetent_military_force_desc:0 "It seems as if the Portuguese Armed Forces, the 'Exército Português', has yet to evolve with the standards of other regional powers and effectively assert its influence over its colonial sphere. This proves to be particularly dangerous with the rising amount of instability and chaos throughout the country as well as the ever-increasing possibility of a Spanish invasion of the Portuguese territory. In addition, many concerns have been raised as recent replacements in the army have led to an increased rise of extremists and nationalists like never seen before, which could prove fatal for the liberalization efforts already being made by the King."
- 
+ANG_widespread_famine:0 "Widespread Famine"
+ANG_widespread_famine_desc:0 ""
+
  #Monaco
  MCO_monte_carlo_casino:0 "Monte Carlo Casino"
  MCO_monte_carlo_casino_desc:0 "The Casino de Monte-Carlo is owned and operated by the Société des bains de mer de Monaco, a public company in which the Monaco government and the ruling royal family have a majority interest. The company also owns the principal hotels, sports clubs, foodservice establishments, and nightclubs throughout the Principality. However, citizens of Monaco are forbidden from entering the gaming rooms of the casino."
