--- a/localisation/russian/loading_tips_l_russian.yml
+++ b/localisation/russian/loading_tips_l_russian.yml
@@ -36,7 +36,7 @@
  LOADING_TIP_34: "Ничто так не привлечет к нам сочувствия американцев, как американская кровь, пролитая на поле боя.\n- Уинстон Черчилль, 5 сентября 1914 г."
  LOADING_TIP_35: "Ну же, сукины дети, вы хотите жить вечно?\n- Дэниел Дейли"
  LOADING_TIP_36: "Эта война, как и следующая, является войной, чтобы положить конец войне.\n- Дэвид Ллойд Джордж, 1916 г."
- LOADING_TIP_37: "В одиннадцать часов утра закончилась самая жестокая и страшная Война, которая когда-либо бичевала человечество. Я надеюсь, что мы можем сказать, что таким образом, в это роковое утро, пришел конец всем войнам.\n- Дэвид Ллойд Джордж, 11 ноября 1918 г."
+ LOADING_TIP_37: "В одиннадцать часов утра закончилась самая жестокая и страшная война, которая когда-либо бичевала человечество. Я надеюсь, что мы можем сказать, что таким образом, в это роковое утро, пришел конец всем войнам.\n- Дэвид Ллойд Джордж, 11 ноября 1918 г."
  LOADING_TIP_38: "На полях Фландрии колышутся маки \nСреди крестов, стоящих за рядом ряд\n- Джон Маккрей, 1915 г."
  LOADING_TIP_39: "Боже, накажи Англию.\n- Эрнст Лиссауэр"
  LOADING_TIP_40: "Что бы вы ни делали, вы теряете много людей.\n- Шарль Манжен"
