--- a/localisation/russian/ww1_decisions_l_russian.yml
+++ b/localisation/russian/ww1_decisions_l_russian.yml
@@ -1082,7 +1082,7 @@
  member_of_entente_armistice:0 "Отказаться от капитуляции"
  member_of_entente:0 "Враг Центральных Держав\n"
  member_of_centre_armistice:0 "Отказаться от капитуляции"
- refuse_to_surrender_tt:0 "Вы §Yостанетесь в состоянии войны без мира§!.\n\n\n§RАРКАДНАЯ ФУНКЦИЯ. АРКАДНАЯ ФУНКЦИЯ. Это может привести к нежелательным результатам. (например, сломанные границы, политические события).§!"
+ refuse_to_surrender_tt:0 "Вы §Yостанетесь в состоянии войны без мира§!.\n\n\n§RАРКАДНАЯ ФУНКЦИЯ. Это может привести к нежелательным результатам. (например, сломанные границы, политические события).§!"
  compiegne_armistice:0 "Компьенское перемирие\n"
  compiegne_armistice_mission:0 "Компьенское перемирие"
  compiegne_armistice_message:0 "§YФранция§! и §YАнтанта§! побеждают. §YГермании§! и §Yее союзникам§! придется платить цену, требуемую победителями в послевоенном договоре."
@@ -8853,7 +8853,7 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
 
 
  TUR_ottoman_intel_to_enemies_3_resistance_target_3_recruitable_population_malus_3_tt:0 "Изменит £ww1_flag_ALB §YАлбанское меньшинство§! на\nРазведданные врагам: §R+15%§!\nЦель сопротивления: §R+15%§!\nВоеннообязанное население: §R-7.00%§!\n"
- ALB_ICC_support:0 "Поддерживать ICC"
+ ALB_ICC_support:0 "Поддержка ICC"
  ALB_rural_chaos:0 "Деревенский хаос"
  ALB_rural_chaos_desc:0 "Землевладельцы и радикальные мусульмане объединили усилия, чтобы помешать законному правительству обеспечить соблюдение национальных законов."
  ALB_dutch_gendarmerie_tt:0 "Развернуть дивизию во §YВлере§! с 3 пехотными батальонами. §RЭто подразделение будет расформировано в случае крупного конфликта.§!"
