--- a/localisation/russian/ww1_ideas_l_russian.yml
+++ b/localisation/russian/ww1_ideas_l_russian.yml
@@ -1109,7 +1109,7 @@
  RUS_idea_agrarian_empire:0 "Аграрная империя"
  RUS_idea_agrarian_empire_desc:0 "Более 70% населения России - это крестьянство. Для того чтобы завершить индустриализацию страны, необходимо завершить аграрную реформу."
  RUS_idea_dual_power:0 "Двоевластие"
- RUS_idea_dual_power_desc:0 "Несмотря на то, что против самодержавного царского режима выступают одни и те же люди, группировки Временного правительства преследуют разные идеологии и цели. Власть в России разделилась между буржуазией, желающей конституционной республики, и рабочими, стремящимися к социалистической революции. Однако, поскольку меньшевики, считающие, что социализм трудно осуществить сразу, пошли на компромисс с Думой, Временное правительство было создано на основе соглашения между Временным комитетом Думы, представляющим буржуазию, и Советами, являющимися региональными советами рабочих."
+ RUS_idea_dual_power_desc:0 "Несмотря на то, что против самодержавного царского режима выступают одни и те же люди, группировки Временного Правительства преследуют разные идеологии и цели. Власть в России разделилась между буржуазией, желающей конституционной республики, и рабочими, стремящимися к социалистической революции. Однако, поскольку меньшевики, считающие, что социализм трудно осуществить сразу, пошли на компромисс с Думой, Временное правительство было создано на основе соглашения между Временным комитетом Думы, представляющим буржуазию, и Советами, являющимися региональными советами рабочих."
  RUS_idea_strike_movement:0 "Забастовочное движение"
  RUS_idea_strike_movement_desc:0 "На крупнейших заводах почти каждый день проходят массовые забастовки."
  RUS_idea_strike_movement2:0 "Всероссийская забастовка"
@@ -1534,7 +1534,7 @@
  VIN_french_military_supplies:0 "[Root.Overlord.getAdjective]ие военные припасы"
  VIN_french_military_supplies_desc:0 "[Root.Overlord.getName] поставляет нам оружие и технику в соответствии с нашими запросами, предоставляя нам небольшую часть своего европейского производства."
  VIN_Guerilla_Tradition:0 "Партизанская традиция"
- VIN_Guerilla_Tradition_descC:0 "Неверно полагать, что все индокитайцы - прирожденные партизаны, но страна как нельзя лучше подходит для ведения такой войны, а народ имеет давние традиции ведения партизанской войны, начиная с древних легенд и заканчивая недавним сопротивлением колонизаторам."
+ VIN_Guerilla_Tradition_desc:0 "Неверно полагать, что все индокитайцы - прирожденные партизаны, но страна как нельзя лучше подходит для ведения такой войны, а народ имеет давние традиции ведения партизанской войны, начиная с древних легенд и заканчивая недавним сопротивлением колонизаторам."
  
  #GERMANY
  GER_hungarian_crisis:0 "Венгерский кризис"
@@ -1815,7 +1815,7 @@
 
  #MEXICO
  MEX_idea_porfiriato:0 "Порфириат"
- MEX_idea_porfiriato_desc:0 "Генерал Диас установил президентскую диктатуру. Во время его правления крестьянство угнеталось, чтобы провести индустриализацию Мексики."
+ MEX_idea_porfiriato_desc:0 "Генерал Диас установил президентскую диктатуру. При его правлении угнетается крестьянство, чтобы провести индустриализацию Мексики."
  MEX_idea_mexican_revolution:0 "Мексиканская революция"
  MEX_idea_mexican_revolution_desc:0 "Крестьянство и демократическая оппозиция объединились, чтобы свергнуть правительство диктатора Диаса!"
  MEX_idea_political_violence:0 "Политическое насилие"
@@ -2934,6 +2934,9 @@
  SRA_counter_intelligence:0 "Counter Intelligence"
  SRA_special_council_idea:0 "Special Council"
  SRA_british_advisors:0 "British Advisors"
+ # RSO
+ RCW_northern_russian_expedition_idea:0 "Northern Russian expedition"
+ RCW_northern_russian_expedition_idea_desc:0 "Deploying to the icy ports of Northern Russia, Entente forces have taken up the crucial task of protecting vast stockpiles of equipment from enemy capture. Amidst relentless adversities, we've fortified these strategic harbors against incursions."
  #DON
  DON_alekseev_organization_1:0 "Alekseev Organization"
  DON_alekseev_organization_2:0 "Alekseev Organization"
