--- a/localisation/russian/state_names_l_russian.yml
+++ b/localisation/russian/state_names_l_russian.yml
@@ -797,7 +797,7 @@
  STATE_796: "Канвондо"
  STATE_797: "Хванхэ"
  STATE_798: "Германское Самоа"
- STATE_799: "Пхенчхан"
+ STATE_799: "Пхенандо"
  STATE_800: "Кенги"
  STATE_801: "Чхунчхон"
  STATE_802: "Кенсан"
@@ -1049,6 +1049,7 @@
  STATE_1048: "Свазиленд"
  STATE_1049: "Оранжевое Свободное Государство"
  STATE_1050: "Берег Скелетов"
+ STATE_1051: "Риау-Линга"
 
  Dyushambe: "Dyushambe"
  YODONG_STATE: "Yodong"
