quick fix-thx daggie

--- a/localisation/english/ww1_bulgaria_I_english.yml
+++ b/localisation/english/ww1_bulgaria_I_english.yml
@@ -330,12 +330,12 @@ ww1_BUL_TUR.17.t: "Mustafa Asim Bey is Strict"
  ww1_BUL_TUR.30.a: "Sure"
  ww1_BUL_TUR.30.b: "No"
 
- ww1_BUL_TUR.31.t: "Bulgaria Disagrees #2"
+ ww1_BUL_TUR.31.t: "Bulgaria Disagrees" #2
  ww1_BUL_TUR.31.d: "The Bulgarian delegation doesn't agree with the proposals presented."
  ww1_BUL_TUR.31.a: "Well, Move on"
  ww1_BUL_TUR.31.b: "Cease Negotiations"
 
- ww1_BUL_TUR.32.t: "Mustafa Asim Bey would like to move on (after a disagreement) #2"
+ ww1_BUL_TUR.32.t: "Mustafa Asim Bey would like to move on" 
  ww1_BUL_TUR.32.d: "After some disagreement, Mustafa Asim Bey wishes to continue further discussions on other topics."
  ww1_BUL_TUR.32.a: "Ok"
 
