--- a/localisation/english/ww1_bulgaria_I_english.yml
+++ b/localisation/english/ww1_bulgaria_I_english.yml
@@ -431,8 +431,7 @@ ww1_BUL_TUR.52.d: "With the growing instability in the region, a significant por
 ww1_BUL_TUR.52.a: "Welcome to Plovdiv."
 
 ww1_BUL_TUR.53.t: "Border Migration"
-ww1_BUL_TUR.53.d: "The chaos near the Bulgarian border has forced Turkish citizens to flee from their homes. The movement of people may affect Turkey’s manpower reserves and
-complicate efforts to maintain order in the region."
+ww1_BUL_TUR.53.d: "The chaos near the Bulgarian border has forced Turkish citizens to flee from their homes. The movement of people may affect Turkey’s manpower reserves and complicate efforts to maintain order in the region."
 ww1_BUL_TUR.53.a: "Well, ok."
 
 ww1_BUL_TUR.54.t: "Border Migration"
@@ -488,8 +487,7 @@ ww1_BUL_TUR.62.a: "Concerning News"
  BUL_idea_balkan_hegemony:0 "Balkan Hegemony"
  BUL_idea_balkan_hegemony_desc:0 ""
  BUL_idea_the_balkan_prussia:0 "Balkan Prussia"
- BUL_idea_the_balkan_prussia_desc:0 "Bulgaria fierce nationalism and powerful
-military. causes it to gain a reputation as the Prussia of the Balkans with its foundations of unity and belief in the inheritance of a great Balkan empire. The country is therefore driven to build a formidable military force."
+ BUL_idea_the_balkan_prussia_desc:0 "Bulgaria fierce nationalism and powerful military. causes it to gain a reputation as the Prussia of the Balkans with its foundations of unity and belief in the inheritance of a great Balkan empire. The country is therefore driven to build a formidable military force."
  BUL_idea_agrarian_economy:0 "Agrarian Economy"
  BUL_idea_agrarian_economy_desc:0 "Bulgaria's economy thrives on its vast, fertile farmlands, with agriculture leading the way. Rural communities work tirelessly to produce essential crops, yet the absence of industrialization and modernization slows growth. Nonetheless, the spirit of the Bulgarian peasantry, rooted in hard work and resilience, keeps hope alive for a future where these agrarian foundations support a flourishing, modernized country."
  BUL_idea_agrarian_mobilisation:0 "Agrarian Mobilisation"
